--- a/views/emails/user-activation.html
+++ b/views/emails/user-activation.html
@@ -12,7 +12,6 @@
 <p>Чтобы активировать Вашу учетную запись, пожалуйста, перейдите по ссылке: <a href="%activationLink%">%activationLink%</a></p>
 <p>Если Вы не проводили регистрацию, проигнорируйте это письмо - возможно, кто-то совершил ошибку.</p>
 
-<p>--</p>
-<p>С уважением, служба информации ...</p>
+%EMAIL_SIGNATURE%
 </body>
 </html>
