--- a/views/emails/feedback.html
+++ b/views/emails/feedback.html
@@ -1,4 +1,4 @@
-<!-- #SUBJECT: Предложение идеи, замечания, ошибки-->
+<!-- #SUBJECT: Обратная связь: идеи, замечания, ошибки-->
 <!doctype html>
 <html lang="ru">
 <head>
